2012-12-04  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Ensure compatibility with TYPO3 6.0
	* Released version 1.0.7

2012-02-20  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #34123: Rewrite rule does not work when realurl is enabled
	* Released version 1.0.6

2010-05-19  Dmitry Dulepov  <dmitry.dulepov+typo3svn@gmail.com>

	* Fixed bug #6689: do not limit normal tt_news sitemap to two days
	* Fixed bug #6548: News sitemap lacks content of <news:title> tag
	* Fixed bug #6567: News sitemap: publication name is not configurable
	* Fixed bug #4023: Missing doktype property of the first page in the pageList array
	* Fixed bug #2882: add sitemap autodiscovery information to the manual
	* Released version 1.0.5

2010-01-09  Dmitry Dulepov  <dmitry.dulepov+typo3svn@gmail.com>

	* Fixed: deprecated calls
	* Fixed bug #4157: Annoying logging of changes to tx_ddgooglesitemap_lastmod
	* Fixed bug #3033: News sitemap: respect Google requirements
	* Fixed bug #3716: pages below a shortcut page aren't rendered
	* Released version 1.0.4

2010-01-09  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fix: wrong XCLASS in TCEmain hook

2009-04-01  Dmitry Dulepov  <dmitry@typo3.org>

	* Prevent duplicate timestamps in the lastmod field

2009-03-18  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed problem: doktype and no_search were not available
	* Released version 1.0.3

2009-03-17  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #2862: tt_news sitemap should produce a page sitemap
	* Fixed bug #2704: Shortcut on top level messes up the whole sitemap
	* Fixed bug #2693: Page type Shortcut adds second entry for page
	* Fixed bug #2692: Pages of type "Visual menu separator" are included in sitemap
	* Fixed bug #2867: Exclude 'no search' pages from the sitemap
	* Released version 1.0.1
	* Apply 'forceStartPid' to news sitemaps too
	* Released version 1.0.2

2009-02-25  Dmitry Dulepov  <dmitry@typo3.org>

	* Added an option to skip root line check for news