@@ -1,3 +1,7 @@
+2013-02-19  Dmitry Dulepov  <dmitry.dulepov@gmail.com>
+
+	* Add limit & offset URL parameters to allow multiple sitemaps
+
 2012-12-04  Dmitry Dulepov  <dmitry.dulepov@gmail.com>
 
 	* Ensure compatibility with TYPO3 6.0
